Improved feedback for give command (Like invalid usage, etc.). Added @s target to give command.